# backend/travel-with-anna/src/main/java/com/andwis/travel_with_anna/auth/AuthenticationResponse.java
@@ -7,4 +7,6 @@ import lombok.Data;
 @Builder
 public class AuthenticationResponse {
     private String token;
+    private String userName;
+    private String email;
 }
