# backend/travel-with-anna/src/main/java/com/andwis/travel_with_anna/user/UserController.java
@@ -1,6 +1,5 @@
 package com.andwis.travel_with_anna.user;
 
-
 import com.andwis.travel_with_anna.auth.AuthenticationResponse;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
@@ -18,9 +17,9 @@ public class UserController {
 
     private final UserService service;
 
-    @GetMapping("/profile")
-    public ResponseEntity<UserCredentials> getProfile(Authentication connectedUser) {
-        UserCredentials userCredentials = service.getProfile(connectedUser);
+    @GetMapping("/credentials")
+    public ResponseEntity<UserCredentials> getCredentials(Authentication connectedUser) {
+        UserCredentials userCredentials = service.getCredentials(connectedUser.getName());
         return ResponseEntity.ok(userCredentials);
     }
 
@@ -31,16 +30,14 @@ public class UserController {
     }
 
     @PatchMapping("/change-password")
-    @ResponseStatus(HttpStatus.ACCEPTED)
     public ResponseEntity<UserRespond> changePassword(@Valid @RequestBody ChangePasswordRequest request, Authentication connectedUser) {
         UserRespond respond = service.changePassword(request, connectedUser);
-        return ResponseEntity.ok(respond);
+        return ResponseEntity.accepted().body(respond);
     }
 
     @DeleteMapping("/delete")
-    @ResponseStatus(HttpStatus.NO_CONTENT)
     public ResponseEntity<UserRespond> delete(@Valid @RequestBody PasswordRequest request, Authentication connectedUser) {
-       UserRespond respond =service.deleteUser(request, connectedUser);
-       return ResponseEntity.ok(respond);
+        UserRespond respond =service.deleteConnectedUser(request, connectedUser);
+        return ResponseEntity.status(HttpStatus.NO_CONTENT).body(respond);
     }
 }
